--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,7 @@
   },
   "tasks": {
     "lint": "deno lint",
-    "check": "deno check src/**/*.{ts,tsx}",
+    "check": "deno check src/**/*.tsx",
     "fmt": "deno fmt",
     "fmt:check": "deno fmt --check"
   }
