--- a/deno.json
+++ b/deno.json
@@ -20,10 +20,10 @@
     "check": "deno check src/**/*.tsx",
     "fmt": "deno fmt",
     "fmt:check": "deno fmt --check",
-    "dev:front": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-net --allow-run npm:vite",
+    "dev:front": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-net --allow-run --allow-ffi npm:vite",
     "dev:back": "deno serve --port 3001 --allow-env --allow-net api/server.ts",
     "dev": "deno run --allow-all dev.ts",
-    "build": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-net --allow-run npm:vite build",
-    "preview": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-net --allow-run npm:vite preview"
+    "build": "npm run build",
+    "preview": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-net --allow-run --allow-ffi npm:vite preview"
   }
 }
