--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/server.ts": {
-      "runtime": "deno@lastest"
+      "runtime": "deno@2.1.0"
     }
   },
   "routes": [
