--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "functions": {
-    "api/server.ts": {
+    "api/index.ts": {
       "runtime": "deno@2.1.0"
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/server.ts"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
