feat: Add Meme Gallery and Search Bar components for meme generation
- Implemented MemeGallery component to fetch and display meme templates based on search queries.
- Created SearchBar component for user input to search for memes.
- Added Home page to integrate SearchBar and MemeGallery.
- Developed Editor page for customizing memes with text overlays.
- Introduced NotFound page for handling 404 errors.
- Added basic HTML structure in index.html and main application logic in index.tsx.
- Styled components with Tailwind CSS and custom styles for better UI/UX.
- Implemented localStorage functionality to persist search queries and editor data.

--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,7 @@
   },
   "tasks": {
     "lint": "deno lint",
-    "check": "deno check src/**/*.tsx",
+    "check": "deno check web api tasks",
     "fmt": "deno fmt",
     "fmt:check": "deno fmt --check",
     "vite": "deno run -A tasks/vite.ts",
